# zackdefender

./: CMakeLists.txt  EULA.txt  PRIVACY.md  Package.appxmanifest  README.md  README_zh-CN.md  deploy.bat  qtquickcontrols2.conf  uninstall.bat
docs/: EULA.txt
scripts/: register-right-click.ps1  unregister-right-click.ps1
src/: main.cpp  resources.qrc
src/assets/: yinhu_cleanup.bat
src/backend/: ClamAVEngine.cpp  ClamAVEngine.h  ContextMenuManager.cpp  ContextMenuManager.h  DefenderEngine.cpp  DefenderEngine.h  DefenderScanner.cpp  DefenderScanner.h  EngineManager.cpp  EngineManager.h  HashEngine.cpp  HashEngine.h  ProtectionMonitor.cpp  ProtectionMonitor.h  QuarantineManager.cpp  QuarantineManager.h  ScanEngine.h  SilverFoxEngine.cpp  SilverFoxEngine.h  ThemeManager.cpp  ThemeManager.h  ThreatHistory.cpp  ThreatHistory.h  TrayManager.cpp  TrayManager.h  UpdateManager.cpp  UpdateManager.h  VirusTotalEngine.cpp  VirusTotalEngine.h  YaraEngine.cpp  YaraEngine.h
src/qml/: Main.qml
src/qml/pages/: DashboardPage.qml  ProtectionPage.qml  QuarantinePage.qml  ScanPage.qml  SettingsPage.qml  SilverFoxPage.qml
